--- a/Med6/Packages/manifest.json
+++ b/Med6/Packages/manifest.json
@@ -7,7 +7,6 @@
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "2.2.2",
-    "com.unity.pico.livepreview": "file:C:/Users/khs14/Downloads/PICO Unity Live Preview Plugin (Experiment)",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
@@ -16,6 +15,7 @@
     "com.unity.xr.interaction.toolkit": "2.0.4",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.openxr": "1.5.3",
+    "com.unity.xr.openxr.picoxr": "file:C:/Users/khs14/Downloads/PICO Unity OpenXR Plugin（Experiment）",
     "com.unity.xr.picoxr": "file:C:/Users/khs14/Downloads/PICO Unity IntegrationSDK-214-20230302",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
